<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ItemNameTV"
        android:text="@string/ItemNameTV"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemNameET"
        android:hint="@string/ItemNameETHint"
        />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemPriceTV"
        android:text="@string/ItemPriceTV"

        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemPriceET"
        android:hint="@string/ItemPriceETHint"
        />



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ItemConditionTV"
        android:text="@string/ItemConditionTV"

        />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">
        <RadioButton android:id="@+id/NewConditionRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewCondition"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/UsedConditionRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UsedCondition"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <Spinner
        android:id="@+id/Categories_Spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ListButton"
        android:text="@string/ListButton"

        />

</LinearLayout>
